# Data_Engineering

./: README.md
Banco Carrefour Data Engineer/: README.md
Formacao Python Developer/: README.md
Formacao Python Developer/Analise de dados com Python e Pandas/: Aula1_Introducao_Python.ipynb  Aula3_Pandas.ipynb  Aula7_Analise_Exploratoria.ipynb  Pandas_Aula4_e_5.ipynb  Pandas_Aula6_Visualizacao.ipynb  aula2_Estrutura_de_dados.ipynb
Formacao Python Developer/Consumindo a API do Twitter com Python/: main.py  pyproject.toml  test.py
Formacao Python Developer/Consumindo a API do Twitter com Python/src/: connection.py  constants.py  responses.py  services.py
Formacao Python Developer/Criando um Pacote de Processamento de Imagens com Python/: requirements.txt  setup.py
Formacao Python Developer/Criando um Sistema Bancario com Python/: banco_dio.py
Formacao Python Developer/Criando uma API com Flask no Ambiente COLAB/: Dados.xlsx  README.md  app.py  requirements.txt
Formacao Python Developer/Desafios Basicos Formacao Python Developer/: encaixa_ou_nao.py  mes.py  tuitando.py
Formacao Python Developer/Desafios Intermediarios Formacao Python Developer/: animal.py  aproveite_a_oferta.py  dragao.py
Formacao Python Developer/Integrando Python com SQLite e MongoDB/: README.md  pymongo_application.ipynb  requirements.txt  sqlAlchemy_application.ipynb
Formacao Python Developer/Modelando o Sistema Bancario em POO com Python/: oop_banco_dio.py
Terraform com AWS/: README.md  main.tf
(+6 files in other folders)
